# snow

./: .gitignore  CMakeLists.txt  Makefile  README.md  readme.md  test.snow  v.mod  vcpkg.json
libs/glm/detail/: _features.hpp
libs/glm/gtc/: type_ptr.hpp
libs/include/GLFW/: glfw3.h
libs/include/glad/: glad.h
libs/include/glm/gtc/: type_ptr.hpp
libs/src/: glad.c
sandbox/: CMakeLists.txt  Game.h  MyScene.cpp  MyScene.h  main.cpp
sandbox/shaders/: shader.frag
snow/: CMakeLists.txt
snow/src/: Shader.cpp  Shader.h  snow.hpp
snow/src/core/: Application.cpp  Application.h  Camera.cpp  Camera.h  Scene.h  Shader.cpp  Shader.h  Window.cpp  Window.h
snow/src/math/: Vector2.h
snow/src/mesh/: Rectangle.cpp  Rectangle.h  Triangle.cpp  Triangle.h
snow/src/objects/: Rectangle.cpp  Rectangle.h
src/: main.cpp  main.v
src/snow/: snow.cpp  snow.h  snow.v
src/snow_lib/: snow.v
